fix(codesnippets):title wrap

--- a/src/styles/stylesheets/components/_codeSnippet.scss
+++ b/src/styles/stylesheets/components/_codeSnippet.scss
@@ -12,6 +12,7 @@
         color:white;
         border-bottom:1px solid white;
         margin-bottom: 5%;
+        word-wrap:anywhere;
     }
 
     &__code
