--- a/src/styles/stylesheets/pages/_DetailedEvent.scss
+++ b/src/styles/stylesheets/pages/_DetailedEvent.scss
@@ -42,6 +42,7 @@
     margin-bottom: 5%;
     display: inline-block;
     border-bottom: 1px solid black;
+    word-wrap:anywhere;
   }
 
   .LinksCont {
